test/error/for-condition-not-bool.dsk
for 1
    echo("hello")
